# comp-comm-portfolio

./: .gitignore  .gitmodules  README.md  docker-compose.yml
.cursor/rules/: forge-test-structures.mdc  solidity-contracts.mdc  solidity-scripts.mdc  solidity-tests.mdc
.github/workflows/: test.yml
backend/: .env.example  Caddyfile  DEPLOYMENT_GUIDE.md  Dockerfile  PORTFOLIO_HOLDINGS.md  README.md  deploy.sh  docker-compose.yml  langgraph.json  pyproject.toml  server.py  test_connection_fix.py
backend/compound_assistant/: __init__.py  agent.py  event_listener.py
backend/compound_assistant/blockchain/: __init__.py  event_listener.py  web3_client.py
backend/compound_assistant/config/: agent.yaml  blockchain.py  contracts.py
backend/compound_assistant/contracts/: __init__.py  message_manager.py  policy_manager.py
backend/compound_assistant/event_handlers/: __init__.py  message_handler.py
backend/compound_assistant/utils/: __init__.py  nodes.py  portfolio_balances.py  tools.py  tools_simplified.py
contracts/: DEPLOYMENT.md  README.md  foundry.toml  validate-deployment.sh
contracts/script/: BaseNetworkDeploy.s.sol  Deploy.s.sol  DeployBaseImpl.s.sol  SepoliaNetworkDeploy.s.sol
contracts/src/: CompCommPortfolio.sol  CompCommToken.sol  ManagementToken.sol  MessageManager.sol  PolicyManager.sol  VaultManager.sol
contracts/test/: CompCommToken.t.sol  (+4 more)
docs/: IMPLEMENTATION_SPEC.md  ISSUES.md  PolicyManager-Integration.md  SPEC.md
frontend/: Dockerfile  MESSAGEMANAGER_INTEGRATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+60 files in other folders)
