[tool.poetry]
name = "chatbot-python"
version = "0.0.1"
description = "CDP AgentKit Example Chatbot"
authors = ["John Peterson <john.peterson@coinbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.4"
langgraph = "^0.2.39"
coinbase-agentkit = { git = "https://github.com/mikeghen/agentkit.git", rev = "a89f97bd2b173cc2f4705087f35f955316f9e395", subdirectory = "python/coinbase-agentkit" }
#coinbase-agentkit = { path = "../../agentkit/python/coinbase-agentkit", develop = true }
coinbase-agentkit-langchain = "^0.1.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
websockets = "^12.0"
web3 = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 